[package]
name = "iroh-gossip-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
anyhow = "1.0.98"
bytes = "1.10.1"
clap = { version = "4.5.43", features = ["derive"] }
data-encoding = "2.9.0"
ed25519-dalek = "2.2.0"
futures-lite = "2.6.1"
iroh = "0.91.1"
iroh-gossip = "0.91.0"
n0-future = "0.2.0"
n0-snafu = "0.2.1"
postcard = "1.1.3"
rand = { version = "0.8", features = ["std_rng"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
snafu = "0.8.6"
tokio = "1.47.1"
tracing = "0.1.41"
